--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-almost": "^1.0.1",
+    "chai-as-promised": "^7.1.1",
     "grunt": "^1.0.3",
     "grunt-eslint": "^21.0.0",
     "grunt-mocha-istanbul": "^5.0.2",
