--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   },
   "devDependencies": {
     "eslint": "^7.17.0",
-    "jest": "^26.6.3"
+    "grunt": "^1.4.1",
+    "grunt-eslint": "^24.0.0",
+    "grunt-mocha-istanbul": "^5.0.2",
+    "istanbul": "^0.4.5",
+    "jest": "^26.6.3",
+    "mocha": "^9.1.3"
   },
   "dependencies": {
     "n64": "0.0.18"
