--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   ],
   "homepage": "https://github.com/spark404/dataflashlog",
   "bugs": "https://github.com/spark404/dataflashlog/issues",
-  "main": "dataflashlog.js",
+  "main": "dist/dataflashlog.js",
+  "types": "dist/dataflashlog.d.ts",
   "scripts": {
+    "prepublish": "tsc",
     "eslint": "eslint src/*.ts test/*.ts",
     "test": "jest"
   },
