--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,18 @@
   "compilerOptions": { /* Docs: https://www.typescriptlang.org/tsconfig */
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "bin",
+    "outDir": "dist",
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
     "checkJs": true,
     "allowJs": true,
+    "declaration": true,
     "moduleResolution": "node",
     "types": [
       "node",
-      "jest",
-      "mocha"
+      "jest"
     ],
     "lib": [
       "es6"
